cilium_netpolicy_examples/CiliumClusterwideNetworkPolicy6.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: init
specs:
  - endpointSelector:
      matchLabels:
        "reserved:init": ""
    ingress:
    - fromEntities:
      - host
    egress:
    - toEntities:
      - all
      toPorts:
      - ports:
        - port: "53"
          protocol: UDP



# In some situations, Cilium can’t determine the labels of an endpoint immediately when 
# the endpoint is created, and therefore can’t allocate an identity for the endpoint at that point.
#  Until the endpoint’s labels are known, Cilium temporarily associates a special single label 
#  reserved:init to the endpoint. When the endpoint’s labels become known, Cilium then replaces 
#  that special label with the endpoint’s labels and allocates a proper identity to the endpoint.

# This may occur during endpoint creation in the following cases:

# Running Cilium with docker via libnetwork

# With Kubernetes when the Kubernetes API server is not available

# In etcd mode when the corresponding kvstore is not available



# To allow traffic to/from endpoints while they are initializing, you can create policy rules
#  that select the reserved:init label, and/or rules that allow traffic to/from the special init entity.

# For instance, writing a rule that allows all initializing endpoints to receive connections from 
# the host and to perform DNS queries may be done as follows:
