cilium_netpolicy_examples/External-ips-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      id: app1
      zgroup: testapp
  template:
    metadata:
      labels:
        id: app1
        zgroup: testapp
    spec:
      containers:
        - name: web
          image: quay.io/cilium/demo-httpd:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: external-ips-service
  labels:
    zgroup: testapp
    id: app1
spec:
  selector:
    zgroup: testapp
    id: app1
  externalIPs:
  - 192.0.2.233
  ports:
  - protocol: TCP
    port: 82
    targetPort: 80
